--- a/debian/libnvidia-egl-wayland1.links.in
+++ b/debian/libnvidia-egl-wayland1.links.in
@@ -1,1 +1,1 @@
-#LIBDIR#/libnvidia-egl-wayland.so.1.0.2	#LIBDIR#/libnvidia-egl-wayland.so.1
+#LIBDIR#/#PRIVATE#/libnvidia-egl-wayland.so.1.0.2	#LIBDIR#/#PRIVATE#/libnvidia-egl-wayland.so.1
