--- a/debian/control
+++ b/debian/control
@@ -681,7 +681,8 @@ Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Recommends:
- libegl-${nvidia}0,
+ libegl-${nvidia}0
+ | libegl-nvidia-legacy-390xx0,
 Description: NVIDIA binary EGL driver - common files
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
@@ -736,7 +737,8 @@ Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Recommends:
- lib${nvidia}-egl-wayland1,
+ lib${nvidia}-egl-wayland1
+ | libnvidia-legacy-390xx-egl-wayland1,
 Description: NVIDIA binary Wayland EGL external platform - common files
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
@@ -771,9 +773,11 @@ Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Recommends:
- ${nvidia}-vulkan-icd,
+ ${nvidia}-vulkan-icd
+ | nvidia-legacy-390xx-vulkan-icd,
 Conflicts:
  libgl1-${nvidia}-glx,
+ libgl1-nvidia-legacy-390xx-glx,
  nvidia-nonglvnd-vulkan-common,
 Description: NVIDIA Vulkan driver - common files
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
@@ -810,9 +814,11 @@ Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Recommends:
- ${nvidia}-nonglvnd-vulkan-icd,
+ ${nvidia}-nonglvnd-vulkan-icd
+ | nvidia-legacy-390xx-nonglvnd-vulkan-icd,
 Conflicts:
  libgl1-${nvidia}-glvnd-glx,
+ libgl1-nvidia-legacy-390xx-glvnd-glx,
  nvidia-vulkan-common,
 Description: NVIDIA Vulkan driver - common files (non-GLVND variant)
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
@@ -1277,7 +1283,8 @@ Multi-Arch: foreign
 Depends:
  ${misc:Depends}
 Recommends:
- ${nvidia}-opencl-icd,
+ ${nvidia}-opencl-icd
+ | nvidia-legacy-390xx-opencl-icd,
 Description: NVIDIA OpenCL driver - common files
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
