--- a/debian/libnvidia-egl-wayland1.lintian-overrides.in
+++ b/debian/libnvidia-egl-wayland1.lintian-overrides.in
@@ -3,3 +3,6 @@ hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
+
+# Lintian and debhelper disagree w.r.t. a library in a private directory.
+package-has-unnecessary-activation-of-ldconfig-trigger
