--- a/debian/not-installed.in
+++ b/debian/not-installed.in
@@ -31,3 +31,11 @@ tls_test
 tls_test_dso.so
 
 NVIDIA_Changelog
+
+libEGL.so.1.1.0
+libGL.so.1.7.0
+libGLESv1_CM.so.1.2.0
+libGLESv2.so.2.1.0
+libGLX.so.0
+libGLdispatch.so.0
+libOpenGL.so.0
