--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Uploaders:
  Andreas Beckmann <anbe@debian.org>,
  Vincent Cheng <vcheng@debian.org>,
  Luca Boccassi <bluca@debian.org>,
-Vcs-Svn: svn://anonscm.debian.org/pkg-nvidia/packages/nvidia-graphics-drivers/trunk
-Vcs-Browser: https://anonscm.debian.org/viewvc/pkg-nvidia/packages/nvidia-graphics-drivers/
+Vcs-Browser: https://salsa.debian.org/nvidia-team/nvidia-graphics-drivers
+Vcs-Git: https://salsa.debian.org/nvidia-team/nvidia-graphics-drivers.git
 Build-Depends:
  debhelper (>= 9),
  bzip2,
