--- a/debian/nvidia-drm-outputclass.conf
+++ b/debian/nvidia-drm-outputclass.conf
@@ -4,6 +4,11 @@
 # version 3.9 or higher with CONFIG_DRM enabled, and only if the nvidia.ko
 # kernel module is loaded before the X server is started.
 
+Section "Files"
+    ModulePath     "/usr/lib/xorg/modules/linux"
+    ModulePath     "/usr/lib/xorg/modules"
+EndSection
+
 Section "OutputClass"
     Identifier     "nvidia"
     MatchDriver    "nvidia-drm"
