--- a/debian/xserver-xorg-video-nvidia.install.in
+++ b/debian/xserver-xorg-video-nvidia.install.in
@@ -1,4 +1,4 @@
 nvidia_drv.so		usr/lib/#PRIVATE#/
-libglx.so.#VERSION#	usr/lib/#PRIVATE#/
+libglx.so.#VERSION#	usr/lib/#PRIVATE#/modules/
 nvidia.ids		usr/lib/#PRIVATE#/
 nvidia-drm-outputclass.conf	etc/#PRIVATE#/
