--- a/debian/control
+++ b/debian/control
@@ -552,7 +552,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
- libgles1 (>= 0.2.999) | libgles1-glvnd-nvidia,
+ libgles1 (>= 0.2.999) | libgles1-glvnd-nvidia | ${nvidia}-alternative,
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary OpenGL|ES 1.x library${nvidia:LegacyDesc}
