--- a/debian/rules
+++ b/debian/rules
@@ -342,7 +342,7 @@ override_dh_strip_nondeterminism:
 	-e 's{#LIBDIR#}{$(libdir)}g;' \
 	-e 's{#PRIVATE#}{$(nvidia_private)}g;' \
 	-e 's{#UNLOAD_MODULES#}{$(strip $(unload_modules))}g;' \
-	-e 's{#ARCH_LIST#}{$(ARCH_LIST)}g;' \
+	-e 's{#ARCH_LIST#}{$(DRIVER_ARCH_LIST)}g;' \
 	-e 's{#HAS_UVM#}{$(if $(has_uvm),,#)}g;' \
 	< $< > $@
 
