Add drm-mode.patch to fix nvidia-drm build for Linux 4.19.

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,6 +1,7 @@
 # kernel support
 do-div-cast.patch
 kmem_cache_create_usercopy.patch
+drm-mode.patch
 
 # build system updates
 use-kbuild-compiler.patch
