--- a/debian/rules
+++ b/debian/rules
@@ -138,7 +138,7 @@ compare-copyright-license: LICENSE.txt
 	sed -e '1,/^License: NVIDIA-graphics-drivers/d; 1,/^License: NVIDIA-graphics-drivers$$/d; /^$$\|^Comment:$$/,$$d; /^ \.$$/d' debian/copyright > copyright.tmp
 	sed -e '/^ \.$$/d' LICENSE.txt > LICENSE.tmp
 	diff -w copyright.tmp LICENSE.tmp
-	rm -f copyright.tmp LICENSE.tmp
+	$(RM) copyright.tmp LICENSE.tmp
 
 
 .PHONY: binary binary-arch binary-indep build clean install
@@ -146,15 +146,15 @@ binary binary-arch binary-indep build clean install:
 	dh $@ --with dkms
 
 override_dh_auto_clean:
-	rm -f NVIDIA-Linux
-	rm -fr $(foreach a,$(ARCH_LIST),NVIDIA-Linux-$a $(NVIDIA_DIRNAME_$a))
-	rm -fr kernel-source-tree
-	rm -f nvidia.ids nv-kernel.ids nv-readme.ids pci.ids.nvidia*
-	rm -f LICENSE.txt LICENSE.tmp copyright.tmp
+	$(RM) NVIDIA-Linux
+	$(RM) -r $(foreach a,$(ARCH_LIST),NVIDIA-Linux-$a $(NVIDIA_DIRNAME_$a))
+	$(RM) -r kernel-source-tree
+	$(RM) nvidia.ids nv-kernel.ids nv-readme.ids pci.ids.nvidia*
+	$(RM) LICENSE.txt LICENSE.tmp copyright.tmp
 
 override_dh_clean:
 	dh_clean
-	rm -f $(AUTOCLEAN)
+	$(RM) $(AUTOCLEAN)
 	$(MAKE) -f debian/rules $(AUTOKEEP)
 
 override_dh_auto_configure: prepare
@@ -170,7 +170,7 @@ install-into-tmp:
 	# "Install" into debian/tmp.
 	$(RM) -r debian/tmp
 	cp -al NVIDIA-Linux/ debian/tmp
-	rm -f debian/tmp/NVIDIA_Changelog
+	$(RM) debian/tmp/NVIDIA_Changelog
 	cp -al NVIDIA-Linux-amd64/NVIDIA_Changelog debian/tmp/
 
 build-kernel-source-tree: install-into-tmp
@@ -183,13 +183,13 @@ build-kernel-source-tree: install-into-tmp
 	cp -a debian/tmp/NVIDIA_Changelog $(module_source)/
 
 	# We only want Kbuild.
-	rm -f $(module_source)/makefile
-	rm -f $(module_source)/Makefile.nvidia
+	$(RM) $(module_source)/makefile
+	$(RM) $(module_source)/Makefile.nvidia
 	mv $(module_source)/Makefile.kbuild $(module_source)/Makefile
 
 	# We may need nv-kernel.o for several architectures to accomodate
 	# all kernel flavors. Use Kbuild-compatible names.
-	rm -f $(module_source)/nv-kernel.o
+	$(RM) $(module_source)/nv-kernel.o
 	$(foreach a,$(BLOB_ARCH_LIST),cp -a NVIDIA-Linux-$a/kernel/nv-kernel.o $(module_source)/nv-kernel-$a.o_shipped ;)
 
 	# Install a debian/ tree.
@@ -223,13 +223,13 @@ build-kernel-dkms-tree: build-kernel-source-tree
 	rmdir $(dir $(module_source))
 	cd $(dkms_source) \
 	    && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2 \
-	    && rm -rf .pc debian
+	    && $(RM) -r .pc debian
 	ls -la $(dkms_source)
 
 # This target is not used by the package build process.  You can use it if
 # you want to work with the patches that get applied to the module source.
 kernel-source-tree: prepare build-kernel-source-tree
-	rm -rf $@
+	$(RM) -r $@
 	cp -a $(module_source) $@
 	cd $@ && QUILT_PATCHES=../debian/module/debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2
 
@@ -411,4 +411,4 @@ get-orig-source-files/empty: get-orig-source-prepare/empty $(foreach a,$(ARCH_LI
 
 .PHONY: get-orig-source
 get-orig-source: get-orig-source-pack/empty
-	rm -rf get-orig-source
+	$(RM) -r get-orig-source
