libglx.so has been replaced by libglxserver_nvidia.so

--- a/debian/control
+++ b/debian/control
@@ -898,7 +898,7 @@ Pre-Depends:
  dpkg (>= 1.17.21),
  ${nvidia:legacy-check},
 Depends:
- glx-alternative-nvidia (>= 0.8.4~) [!ppc64el],
+ glx-alternative-nvidia (>= 0.9) [!ppc64el],
  ${misc:Depends}
 Provides:
  ${nvidia}-alternative--kmod-alias,
